Complete core banking operations